ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: frontend-ingress
  namespace: tests
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 3000
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: static-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
